--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 *.elc
 elpa/
 geiser-0.1.3
-js2-20090723b.el
 js2.el
 ocaml
 paredit.el
@@ -11,3 +10,8 @@ auto-save-list
 semanticdb
 cc-mode
 server
+ecb
+bbdb
+bbdb-2.35
+inf-ruby.el
+rsense-0.3
