--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
 *.elc
 elpa/
-geiser-0.1.3
-js2.el
-ocaml
-paredit.el
-server-location
-slime
-auto-save-list
-semanticdb
-cc-mode
-server
-ecb
-bbdb
-bbdb-2.35
-inf-ruby.el
-rsense-0.3
+bookmarks
+eshell/
+lisp/*.fonts
+auto-save-list/
